--- a/views/ingressmap.pug
+++ b/views/ingressmap.pug
@@ -2,4 +2,4 @@ doctype html
 html
   head
     script(type='text/javascript').
-      var clientId = '304799927293-lv51a7hnjc6tfffd0om8ls3th117lhk9.apps.googleusercontent.com';
+      var clientId = '#{clientId}';
