--- a/views/ingressmap.pug
+++ b/views/ingressmap.pug
@@ -1,6 +1,6 @@
 doctype html
 html
   head
-    script(type='text/javascript').
+    script.
       var clientId = '#{clientId}';
       alert(clientId);
