--- a/views/ingressmap.pug
+++ b/views/ingressmap.pug
@@ -30,7 +30,7 @@ head
     var clientId = '#{clientId}';
     alert(clientId);
   script(type='text/javascript', src='https://apis.google.com/js/client.js')
-  script(type='text/javascript', src='https://maps.googleapis.com/maps/api/js?key=AIzaSyCiHaZgLgcz5Vv3VfhD0CRxT_Mdplec5zI&sensor=true')
+  script(type='text/javascript', src='https://maps.googleapis.com/maps/api/js?key=#{mapApiKey}&sensor=true')
   script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js')
   script(type='text/javascript', src='javascripts/ingressmap.js')
 body
